--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(livox_driver livox/LidarDataSrc.cc)
+add_library(livox_driver STATIC livox/LidarDataSrc.cc)
 target_link_libraries(livox_driver /usr/local/lib/liblivox_sdk_static.a)
