finish parsing point data

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,9 @@
-add_library(livox_driver STATIC livox/LidarDataSrc.cc)
-target_link_libraries(livox_driver /usr/local/lib/liblivox_sdk_static.a)
+add_library(
+    livox_driver STATIC 
+        livox/LidarDataSrc.cc
+        livox/utils/utils.cc
+)
+target_link_libraries(
+    livox_driver 
+        /usr/local/lib/liblivox_sdk_static.a
+)
